--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <strong>START BOOTSTRAP</strong>
                         </div>
                     </div>
+
                     <div class="py-4 col-6">
                         <div class="box  d-flex justify-content-end">
                             <span class="mx-2">PORTFOLIO</span>
@@ -198,6 +199,7 @@
                     </div>
                 </div>
 
+                <!-- lorem row -->
                 <div class="row p-5 text-start">
                     <div class=" col-xl-6">
                         <div class="box px-3">
@@ -278,7 +280,47 @@
     <!-- fine main content -->
 
     <!-- inizio footer -->
-    <footer></footer>
+    <footer>
+
+        <!-- upper footer -->
+        <section class="up-footer-sec py-5">
+
+            <div class="container text-center">
+
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="box p-3">
+                            <h3>LOCATION</h3> 
+                            <p class="fs-5">2215 John Daniel Drive Clark, MO 54243</p>                           
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="box p-3">
+                            <h3>AROUND THE WEB</h3>
+                            <div class="social-icons"><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-google-plus-g"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin-in"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="box p-3">
+                            <h3>ABOUT FREELANCER</h3>    
+                            <p class="fs-5">Freelance is a free to use, open source Boostrap theme created by <a href="">Start Boostrap.</a></p>                        
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- lower footer -->
+        <section class="low-footer-sec py-5">
+
+            <div class="contaner text-center">
+                <p>Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</p>
+            </div>
+
+        </section>
+    </footer>
     <!--fine footer  -->
 </body>
 </html>
