--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="py-4 col-6 ">
+                    <div class="left-nav py-4 col-6 ">
                         <div class="box fs-5">
                             <strong>START BOOTSTRAP</strong>
                         </div>
                     </div>
 
-                    <div class="py-4 col-6">
+                    <div class="right-nav py-4 col-6">
                         <div class="box  d-flex justify-content-end">
-                            <span class="mx-2">PORTFOLIO</span>
-                            <span class="mx-2">ABOUT</span>
-                            <span class="mx-2">CONTACT</span>  
+                            <span class="m-2">PORTFOLIO</span>
+                            <span class="m-2">ABOUT</span>
+                            <span class="m-2">CONTACT</span>  
                         </div>
                     </div>
                 </div>
@@ -46,8 +46,9 @@
                 <div class="row justify-content-center">
                     <div class="col-6">
                         <div class="box">
-                            <img class="rounded-5 mt-5" src="./img/download.png" alt="">
+                            <img class="rounded-5 mt-5 w-25" src="./img//avatar.svg" alt="">
                             <h2 class="py-3 fs-1">START BOOTSTRAP</h2>
+
                             <!-- star row -->
                             <div class="row mb-3">
 
@@ -70,6 +71,7 @@
                                 </div>
 
                             </div>
+
                             <p class="fs-4 mb-4">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                         </div>
                     </div>
@@ -120,42 +122,42 @@
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img/cabin.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img/cake.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img/circus.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img/game.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img/safe.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 col-sm-12">
                         <div class="box">
                             <div class="card my-3" style="width: 100%;">
-                                <img src="./img/bootstrap_freelancer.png" alt="">
+                                <img src="./img//submarine.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -256,14 +258,14 @@
 
                  <!-- contact row -->
                  <div class="row p-5 text-start">
-                    <div class="col">
+                    <div class="col-xl-12">
                         <div class="box px-3">
-                            <ul class="px-3 fs-5">
-                                <li>Name</li>
-                                <li>Email Address</li>
-                                <li>Phone Number</li>
-                                <li>Message</li>
-                            </ul>
+                            <div class="input-group d-block px-3 fs-5">
+                                <input type="text" id="inputname" class="form-control w-100 my-1" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+                                <input type="email" class="w-100 my-1 form-control" placeholder="Email Address" id="InputEmail1" aria-describedby="emailHelp">
+                                <input type="text" id="phonenumber" class="form-control w-100 my-1" placeholder="Phone Number" aria-label="Username" aria-describedby="basic-addon1">
+                                <textarea class="form-control w-100 my-1" placeholder="Message" id="floatingTextarea"></textarea>
+                            </div>
                         </div>
                     </div>
                  </div>
