--- a/index.html
+++ b/index.html
@@ -6,32 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- inizio header -->
     <header>
-        <section class="nav-bar">  
-
-            <div class="container">
-                <div class="row">
-                    <div class="left-nav py-4 col-6 ">
-                        <div class="box fs-5">
-                            <strong>START BOOTSTRAP</strong>
-                        </div>
-                    </div>
-
-                    <div class="right-nav py-4 col-6">
-                        <div class="box  d-flex justify-content-end">
-                            <span class="m-2">PORTFOLIO</span>
-                            <span class="m-2">ABOUT</span>
-                            <span class="m-2">CONTACT</span>  
-                        </div>
-                    </div>
+        <nav class="navbar navbar-expand-lg bg-primary-subtle" data-bs-theme="dark">
+            <div class="container px-0 d-flex justify-content-between w-100">
+              <a class="navbar-brand text-light fw-bold" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse text-end justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active text-light" aria-current="page" href="#">PORTFOLIO</a>
+                  <a class="nav-link text-light" href="#">ABOUT</a>
+                  <a class="nav-link text-light" href="#">CONTACT</a>
                 </div>
+              </div>
             </div>
-
-        </section>
+          </nav>
     </header>
     <!-- fine header -->
 
